<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@android:color/white"
    >
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_toolbar_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="@string/return_back"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:drawableLeft="@drawable/icon_left"
        android:gravity="center_vertical"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_toolbar_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/tv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>